# zangband

./: CLAUDE.md  README.md  dump_data  dump_data.c  meson.build
src/: h-system.h  main-win.c  meson.build  tables.c.classes  tables.c.magic  tables.c.races  tables.c.spells
src/lua/: llimits.h  meson.build
src/tk/: meson.build
