tolua_files = files('lapi.c', 'lauxlib.c', 'lbaselib.c', 'lcode.c', 'ldblib.c',
                   'ldebug.c', 'ldo.c', 'lfunc.c', 'lgc.c', 'liolib.c',
                   'llex.c', 'lmem.c', 'lobject.c', 'lparser.c', 'lstate.c',
                   'lstring.c', 'lstrlib.c', 'ltable.c', 'ltests.c', 'ltm.c',
                   'lundump.c', 'lvm.c', 'lzio.c', 'tolua_bd.c', 'tolua_eh.c',
                   'tolua_gp.c', 'tolua_lb.c', 'tolua_rg.c', 'tolua_tm.c', 'tolua_tt.c',
                   )
